// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`when debug is false 1`] = `
{
  "apiKey": "123",
  "debug": false,
  "fetchInstrumentation": {
    "requestHook": [Function],
  },
}
`;

exports[`when debug is true 1`] = `
{
  "apiKey": "123",
  "debug": true,
  "fetchInstrumentation": {
    "requestHook": [Function],
  },
}
`;

exports[`when the runtime mode is "development" 1`] = `
{
  "apiKey": "123",
  "debug": true,
  "fetchInstrumentation": {
    "requestHook": [Function],
  },
}
`;

exports[`when the runtime mode is "production" 1`] = `
{
  "apiKey": "123",
  "debug": false,
  "fetchInstrumentation": {
    "requestHook": [Function],
  },
}
`;
